[workspace]
resolver = "2"

# Split to default members without component integration tests.
# Used when executing cargo from project root.
default-members = ["src/orchestration", "src/orchestration_macros", "src/xtask"]
# Include component integration tests as a member for IDE support and Bazel builds.
members = [
    "src/orchestration",
    "src/xtask",
    "tests/test_scenarios/rust",
    "src/orchestration/examples/camera_drv_object_det",
    "src/orchestration_macros",
]


[workspace.package]
version = "0.0.3"
edition = "2021"
license-file = "LICENSE.md"
authors = ["S-CORE Contributors"]


[workspace.dependencies]
orchestration = { path = "src/orchestration" }
xtask = { path = "src/xtask" }
orchestration_macros = { path = "src/orchestration_macros" }

kyron-foundation = { git = "https://github.com/eclipse-score/kyron.git", rev = "caa9c0b367d18a09e969c1353e95a8c443ae896b" }
kyron = { git = "https://github.com/eclipse-score/kyron.git", rev = "caa9c0b367d18a09e969c1353e95a8c443ae896b" }
kyron-macros = { git = "https://github.com/eclipse-score/kyron.git", rev = "caa9c0b367d18a09e969c1353e95a8c443ae896b" }
kyron-testing = { git = "https://github.com/eclipse-score/kyron.git", rev = "caa9c0b367d18a09e969c1353e95a8c443ae896b" }
kyron-testing-macros = { git = "https://github.com/eclipse-score/kyron.git", rev = "caa9c0b367d18a09e969c1353e95a8c443ae896b" }
logging_tracing = { git = "https://github.com/eclipse-score/kyron.git", rev = "caa9c0b367d18a09e969c1353e95a8c443ae896b" }

iceoryx2 = { git = "https://github.com/eclipse-iceoryx/iceoryx2.git", rev = "d3d1c9a727d3dc405733081923be5dba8213d6d8", default-features = false }
iceoryx2-cal = { git = "https://github.com/eclipse-iceoryx/iceoryx2.git", rev = "d3d1c9a727d3dc405733081923be5dba8213d6d8" }
iceoryx2-bb-container = { git = "https://github.com/eclipse-iceoryx/iceoryx2.git", rev = "d3d1c9a727d3dc405733081923be5dba8213d6d8" }
iceoryx2-bb-derive-macros = { git = "https://github.com/eclipse-iceoryx/iceoryx2.git", rev = "d3d1c9a727d3dc405733081923be5dba8213d6d8" }
iceoryx2-bb-elementary = { git = "https://github.com/eclipse-iceoryx/iceoryx2.git", rev = "d3d1c9a727d3dc405733081923be5dba8213d6d8" }
iceoryx2-bb-elementary-traits = { git = "https://github.com/eclipse-iceoryx/iceoryx2.git", rev = "d3d1c9a727d3dc405733081923be5dba8213d6d8" }
iceoryx2-bb-lock-free = { git = "https://github.com/eclipse-iceoryx/iceoryx2.git", rev = "d3d1c9a727d3dc405733081923be5dba8213d6d8" }
iceoryx2-bb-memory = { git = "https://github.com/eclipse-iceoryx/iceoryx2.git", rev = "d3d1c9a727d3dc405733081923be5dba8213d6d8" }
iceoryx2-bb-posix = { git = "https://github.com/eclipse-iceoryx/iceoryx2.git", rev = "d3d1c9a727d3dc405733081923be5dba8213d6d8" }
iceoryx2-bb-system-types = { git = "https://github.com/eclipse-iceoryx/iceoryx2.git", rev = "d3d1c9a727d3dc405733081923be5dba8213d6d8" }
iceoryx2-bb-testing = { git = "https://github.com/eclipse-iceoryx/iceoryx2.git", rev = "d3d1c9a727d3dc405733081923be5dba8213d6d8" }
iceoryx2-bb-threadsafe = { git = "https://github.com/eclipse-iceoryx/iceoryx2.git", rev = "d3d1c9a727d3dc405733081923be5dba8213d6d8" }
iceoryx2-pal-concurrency-sync = { git = "https://github.com/eclipse-iceoryx/iceoryx2.git", rev = "d3d1c9a727d3dc405733081923be5dba8213d6d8" }

libc = "0.2"

[workspace.lints.clippy]
std_instead_of_core = "warn"
alloc_instead_of_core = "warn"


[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(feature, values("bazel_build_iceoryx2_qnx8"))',
    'cfg(loom)',
] }
