[package]
name = "logging_tracing"
version.workspace = true
edition.workspace = true

[dependencies]
tracing.workspace = true
tracing-appender.workspace = true
tracing-subscriber.workspace = true
tracing-perfetto-sdk-schema = { workspace = true, optional = true }
tracing-perfetto-sdk-layer = { workspace = true, optional = true }


[features]
default = []
perfetto = ["tracing-perfetto-sdk-layer", "tracing-perfetto-sdk-schema"]
