[package]
name = "orchestration"
version.workspace = true
edition.workspace = true

[dependencies]
kyron.workspace = true
kyron-macros.workspace = true
kyron-foundation.workspace = true

iceoryx2.workspace = true
iceoryx2-bb-container.workspace = true
libc.workspace = true
logging_tracing.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
kyron-testing.workspace = true
kyron-testing-macros.workspace = true
kyron = { workspace = true, features = ["runtime-api-mock"] }

[target.'cfg(loom)'.dependencies]
loom = { version = "0.7", features = ["checkpoint"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(loom)',
    'cfg(feature, values("runtime-api-mock", "orch_tracing"))',
] }

[lints.clippy]
std_instead_of_core = "warn"
alloc_instead_of_core = "warn"

[features]
default = ["iceoryx-ipc", "orch_tracing"]
iceoryx-ipc = []
orch_tracing = []

[[example]]
name = "inter_process_event_sender"
path = "examples/inter_process_event/sender.rs"

[[example]]
name = "inter_process_event_receiver"
path = "examples/inter_process_event/receiver.rs"
