[package]
name = "camera_drv_object_det"
version.workspace = true
edition.workspace = true

[dependencies]
orchestration.workspace = true
kyron.workspace = true
kyron-foundation.workspace = true
logging_tracing.workspace = true
orchestration_macros = { workspace = true }

[build-dependencies]
cc = "1.2.30"
